--- a/.dokploy.yml
+++ b/.dokploy.yml
@@ -1,31 +1,36 @@
-version: '1.0'
+version: "3"
 
 services:
-  app:
-    image: php:7.4-apache
+  nginx:
+    image: nginx:alpine
     ports:
-      - 80
+      - "8000:8000"
     volumes:
-      - .:/var/www/html
+      - ./etc/nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ../:/var/www/html
+    env_file:
+      - .env
+    command: /bin/sh -c "envsubst '$$NGINX_HOST $$NGINX_PORT' < /etc/nginx/conf.d/default.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
     depends_on:
-      - db
-    environment:
-      - DB_HOST=db
-      - DB_NAME=mapos
-      - DB_USER=maposuser
-      - DB_PASS=mapospass
-    command: >
-      bash -c "docker-php-ext-install mysqli &&
-               apache2-foreground"
-  db:
-    image: mysql:5.7
-    environment:
-      MYSQL_DATABASE: mapos
-      MYSQL_USER: maposuser
-      MYSQL_PASSWORD: mapospass
-      MYSQL_ROOT_PASSWORD: rootpass
-    volumes:
-      - db_data:/var/lib/mysql
+      - php-fpm
 
-volumes:
-  db_data:
+  php-fpm:
+    build:
+      context: ./etc/php
+      dockerfile: Dockerfile
+    volumes:
+      - ./etc/php/php.ini:/usr/local/etc/php/conf.d/php.ini
+      - ./etc/php/uploads.ini:/usr/local/etc/php/conf.d/uploads.ini
+      - ../:/var/www/html
+
+  mysql:
+    image: mysql:8.4
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: mapos
+      MYSQL_USER: mapos
+      MYSQL_PASSWORD: mapos
+    ports:
+      - "8989:3306"
+    volumes:
+      - ./data/db/mysql:/var/lib/mysql
