--- a/docker/.env
+++ b/docker/.env
@@ -3,7 +3,7 @@
 # See https://docs.docker.com/compose/environment-variables/#the-env-file
 
 # Nginx
-NGINX_HOST=localhost
+NGINX_HOST=127.0.0.1
 NGINX_PORT=8000
 
 # PHP
