--- a/.dokploy.yml
+++ b/.dokploy.yml
@@ -1,36 +1,3 @@
-version: "3"
-
-services:
-  nginx:
-    image: nginx:alpine
-    ports:
-      - "8000:8000"
-    volumes:
-      - ./etc/nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - ../:/var/www/html
-    env_file:
-      - .env
-    command: /bin/sh -c "envsubst '$$NGINX_HOST $$NGINX_PORT' < /etc/nginx/conf.d/default.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
-    depends_on:
-      - php-fpm
-
-  php-fpm:
-    build:
-      context: ./etc/php
-      dockerfile: Dockerfile
-    volumes:
-      - ./etc/php/php.ini:/usr/local/etc/php/conf.d/php.ini
-      - ./etc/php/uploads.ini:/usr/local/etc/php/conf.d/uploads.ini
-      - ../:/var/www/html
-
-  mysql:
-    image: mysql:8.4
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: mapos
-      MYSQL_USER: mapos
-      MYSQL_PASSWORD: mapos
-    ports:
-      - "8989:3306"
-    volumes:
-      - ./data/db/mysql:/var/lib/mysql
+deploy:
+  steps:
+    - run: docker-compose -f docker/docker-compose.yml --env-file docker/.env up -d --build
