--- a/.dokploy.yml
+++ b/.dokploy.yml
@@ -1,3 +1,31 @@
-deploy:
-  steps:
-    - run: docker-compose -f docker/docker-compose.yml --env-file docker/.env up -d --build
+version: '3.8'
+
+services:
+  app:
+    image: php:7.4-apache
+    ports:
+      - "8000:80"  # Mapea puerto 80 interno a 8000 host
+    volumes:
+      - .:/var/www/html
+    depends_on:
+      - db
+    environment:
+      - DB_HOST=db
+      - DB_NAME=mapos
+      - DB_USER=maposuser
+      - DB_PASS=mapospass
+    command: >
+      bash -c "docker-php-ext-install mysqli && apache2-foreground"
+
+  db:
+    image: mysql:5.7
+    environment:
+      MYSQL_DATABASE: mapos
+      MYSQL_USER: maposuser
+      MYSQL_PASSWORD: mapospass
+      MYSQL_ROOT_PASSWORD: rootpass
+    volumes:
+      - db_data:/var/lib/mysql
+
+volumes:
+  db_data:
